--- a/src/view/app/query.css
+++ b/src/view/app/query.css
@@ -1,31 +1,22 @@
 .r104f42s700-beta13 {
-    --rdg-background-color:initial;
-    --rdg-header-background-color:initial; 
-    color:inherit;
-    block-size:inherit;
-
-
-
+  --rdg-background-color: initial;
+  --rdg-header-background-color: initial;
+  --rdg-row-hover-background-color:rgba(0,0,0,0.2);
+  --rdg-row-selected-background-color: var(--vscode-list-inactiveSelectionBackground);
+  --rdg-checkbox-color: inherit;
+  --rdg-checkbox-focus-color: inherit;
+  --rdg-font-size: inherit;
+  color: inherit;
+  block-size: inherit;
+  --rdg-selection-color: var(--vscode-focusBorder);
+  --rdg-border-color:var(--vscode-menu-border);
 }
 
-body.vscode-light {
-    color: black;
-  }
-  
-  body.vscode-dark .r104f42s700-beta13{
-    --rdg-row-hover-background-color:#2a2d2e;
-    --rdg-row-selected-background-color:#37373d;
-    --row-selected-hover-background-color:#37373d;
-    --rdg-checkbox-color:inherit;
-    --rdg-checkbox-focus-color:inherit;
-    --rdg-font-size:inherit;
-    
-    color: white;
-  }
-  body.vscode-dark .rdg-row-even {
-    --rdg-background-color:#2c2c31;
-  }
-  
-  body.vscode-high-contrast {
-    color: red;
-  }
+.rdg-row-even {
+  --rdg-background-color: rgba(0,0,0,0.1);
+}
+
+body.vscode-dark .rdg-row-even {
+  --rdg-background-color: rgba(0,0,0,0.4);
+}
+
