--- a/src/view/app/indexes.css
+++ b/src/view/app/indexes.css
@@ -1,6 +1,6 @@
 .r104f42s700-beta13 {
   --rdg-background-color: initial;
-  --rdg-header-background-color: initial;
+  --rdg-header-background-color: var(--vscode-editorWidget-background);
   --rdg-row-hover-background-color: rgba(0, 0, 0, 0.2);
   --rdg-row-selected-background-color: var(
     --vscode-list-inactiveSelectionBackground
