--- a/src/view/app/Connection/connection.css
+++ b/src/view/app/Connection/connection.css
@@ -40,10 +40,7 @@ form .connection-details .input-box{
   border-bottom-width: 2px;
   transition: all 0.3s ease;
 }
-.connection-details .input-box input:focus,
-.connection-details .input-box input:valid{
-  border-color: #9b59b6;
-}
+
 form .connection-details .input-box-wide{
   margin-bottom: 15px;
   width: 100%;
@@ -59,10 +56,7 @@ form .connection-details .input-box-wide{
   border-bottom-width: 2px;
   transition: all 0.3s ease;
 }
-.connection-details .input-box-wide input:focus,
-.connection-details .input-box-wide input:valid{
-  border-color: #9b59b6;
-}
+
  form .category{
    display: flex;
    width: 80%;
@@ -129,3 +123,9 @@ form .connection-details .input-box{
     flex-direction: column;
   }
 }
+
+Input[type="text"] {
+  background-color: var(--vscode-input-background);
+  color: var(--vscode-input-foreground);
+  border-color: var(--vscode-editorBracketMatch-border);
+  }
