--- a/src/view/app/Query/Export/export.css
+++ b/src/view/app/Query/Export/export.css
@@ -8,6 +8,7 @@
     align-items:center;
     font-size: inherit;
     font-style: inherit;
+    margin: auto;
   }
 
 .menu {
@@ -25,7 +26,7 @@
 
 #dropdown {
     width: 120px;
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: var(--vscode-editor-inactiveSelectionBackground);
     color: inherit;
 }
 
@@ -34,5 +35,23 @@
     width: 100%;
     align: right;
     bottom: 10px;
+    padding: 5px;
 
 }
+.content {
+  padding: 5px;
+}
+
+.popup-overlay {
+    background: rgba(0, 0, 0, 0.3);
+    z-index: 997 !important;
+    pointer-events: none !important;
+    display: none;
+  }
+
+  .popup-content {
+    z-index: 998 !important;
+    position:relative;
+    pointer-events: auto;
+    display: block;
+  }
