--- a/src/view/app/Fields/fields.css
+++ b/src/view/app/Fields/fields.css
@@ -1,7 +1,9 @@
 .r104f42s700-beta13 {
   --rdg-background-color: initial;
   --rdg-header-background-color: var(--vscode-editorWidget-background);
-  --rdg-row-hover-background-color: rgba(0, 0, 0, 0.2);
+  --rdg-row-hover-background-color: var(--vscode-list-activeSelectionBackground);
+  --row-selected-hover-background-color: var(--vscode-list-activeSelectionBackground);
+  --rdg-row-selected-background-color: var(--vscode-list-inactiveSelectionBackground);
   --rdg-row-selected-background-color: var(
     --vscode-list-inactiveSelectionBackground
   );
@@ -19,4 +21,14 @@
 
 body.vscode-dark .rdg-row-even {
   --rdg-background-color: rgba(0, 0, 0, 0.4);
+}
+
+.c1noyk41700-beta13:checked+.cdwjxv8700-beta13 {
+  background: var(--vscode-editor-foreground);
+  outline: none;
+}
+.cdwjxv8700-beta13 {
+  border: 2px solid var(--vscode-editor-foreground);
+  block-size: 10px;
+  inline-size: 10px;
 }
