--- a/src/view/app/Query/Export/export.css
+++ b/src/view/app/Query/Export/export.css
@@ -1,7 +1,7 @@
 .modal {
     position: center;
-    width: 250px;
-    height: 175px;
+    width: 220px;
+    height: 150px;
     background-color: var(--vscode-notifications-background);
   border: var(--vscode-notifications-border);
     justify-content: center;
@@ -32,14 +32,15 @@
 
 .btn-container {
     position:absolute;
-    width: 100%;
-    align: right;
-    bottom: 10px;
-    padding: 5px;
-
+    left: 5%;
+    top: 96px;
 }
-.content {
-  padding: 5px;
+
+.modal .content {
+  display:block;
+  position:absolute;
+  left: 23%;
+  margin-top: 10px;
 }
 
 .popup-overlay {
@@ -54,4 +55,7 @@
     position:relative;
     pointer-events: auto;
     display: block;
+  }
+  .btn-container .button {
+    margin-right: 10px;
   }
