--- a/src/view/app/Fields/fields.css
+++ b/src/view/app/Fields/fields.css
@@ -32,3 +32,13 @@ body.vscode-dark .rdg-row-even {
   block-size: 10px;
   inline-size: 10px;
 }
+
+.filter-cell{
+  line-height: 35px;
+  padding: 0;
+}
+
+.textInput {
+  background-color: var(--vscode-input-background);
+  color: var(--vscode-input-foreground);
+  }
