--- a/src/view/app/Query/Update/update.css
+++ b/src/view/app/Query/Update/update.css
@@ -22,7 +22,7 @@
   .update-btn-container {
     bottom: 0;
     width: 100%;
-    align-content: right;
+    text-align: center;
     padding: 5px;
 }
 
