fixed commented lines and styling

--- a/src/view/app/Fields/fields.css
+++ b/src/view/app/Fields/fields.css
@@ -12,7 +12,7 @@
   --rdg-font-size: inherit;
   color: inherit;
   --rdg-selection-color: var(--vscode-focusBorder);
-  --rdg-border-color: var(--vscode-menu-border);
+  --rdg-border-color: none;
 }
 
 .rdg-row-even {
