--- a/src/view/app/Query/query.css
+++ b/src/view/app/Query/query.css
@@ -9,7 +9,7 @@
   --rdg-font-size: inherit;
   color: inherit;
   --rdg-selection-color: var(--vscode-focusBorder);
-  --rdg-border-color: var(--vscode-menu-border);
+  --rdg-border-color: none;
 
 }
 .c1wupbe700-beta13 {
