--- a/src/view/app/Query/Update/update.css
+++ b/src/view/app/Query/Update/update.css
@@ -1,5 +1,5 @@
 .update-modal {
-    position:fixed;
+    /* position:fixed; */
     top: 50px;
     background-color: var(--vscode-notifications-background);
     border: var(--vscode-notifications-border);
