--- a/src/view/app/Query/query.css
+++ b/src/view/app/Query/query.css
@@ -66,7 +66,6 @@ body.vscode-dark .rdg-row-even {
     width: fit-content;
     margin-left: auto;
     margin-right: 10px;
-    margin-top: 50px;
 }
 
 .form {
@@ -89,20 +88,20 @@ body.vscode-dark .rdg-row-even {
     position: absolute;
     margin: 0;
     padding: 0;
+    z-index: 2;
     list-style-type: none;
     width: 400px;
     overflow: auto;
-    max-height: 110px;
+    max-height: 90px;
     background-color: rgba(0, 0, 0, 0.8);
+
 }
 
 .autocomplete-list li {
-    padding: 2px;
     width: 200px;
     cursor: pointer;
 }
 
-.container {
-    padding: 50px;
-    margin-bottom: 10px;
+.autocomplete-list li.selected {
+    background-color: rgb(255, 0, 0);
 }
