--- a/src/view/app/Fields/fields.css
+++ b/src/view/app/Fields/fields.css
@@ -42,3 +42,18 @@ body.vscode-dark .rdg-row-even {
   background-color: var(--vscode-input-background);
   color: var(--vscode-input-foreground);
   }
+  
+  .refreshButton {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 9999;
+    background-color: #000000;
+    color: #ffffff;
+    border: none;
+    border-radius: 4px;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+  }
