--- a/src/view/app/Indexes/indexes.css
+++ b/src/view/app/Indexes/indexes.css
@@ -20,3 +20,18 @@
 body.vscode-dark .rdg-row-even {
   --rdg-background-color: rgba(0, 0, 0, 0.4);
 }
+
+.refreshButton {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 9999;
+  background-color: rgba(0, 0, 0, 0.4);
+  color: #ffffff;
+  border: none;
+  border-radius: 4px;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+}
