--- a/src/view/app/Fields/fields.css
+++ b/src/view/app/Fields/fields.css
@@ -49,11 +49,15 @@ body.vscode-dark .rdg-row-even {
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 9999;
-    background-color: #000000;
-    color: #ffffff;
+    background-color: var(--vscode-list-inactiveSelectionBackground);
+    color: var(--rdg-border-color);
     border: none;
     border-radius: 4px;
     padding: 10px 20px;
     font-size: 16px;
     cursor: pointer;
+  }
+  body.vscode-dark .refreshButton{
+    background-color: var(--vscode-list-inactiveSelectionBackground);
+    color: var(--rdg-border-color);
   }
