--- a/src/view/app/Indexes/indexes.css
+++ b/src/view/app/Indexes/indexes.css
@@ -27,11 +27,15 @@ body.vscode-dark .rdg-row-even {
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 9999;
-  background-color: rgba(0, 0, 0, 0.4);
-  color: #ffffff;
+  background-color: var(--vscode-list-inactiveSelectionBackground);
+  color: var(--vscode-editorWidget-background);
   border: none;
   border-radius: 4px;
   padding: 10px 20px;
   font-size: 16px;
   cursor: pointer;
+}
+body.vscode-dark .refreshButton{
+  background-color: var(--vscode-list-inactiveSelectionBackground);
+  color: var(--vscode-editorWidget-background);
 }
