--- a/src/view/app/Fields/fields.css
+++ b/src/view/app/Fields/fields.css
@@ -4,9 +4,7 @@
   --rdg-row-hover-background-color: var(--vscode-list-activeSelectionBackground);
   --row-selected-hover-background-color: var(--vscode-list-activeSelectionBackground);
   --rdg-row-selected-background-color: var(--vscode-list-inactiveSelectionBackground);
-  --rdg-row-selected-background-color: var(
-    --vscode-list-inactiveSelectionBackground
-  );
+  --rdg-row-selected-background-color: var(--vscode-list-inactiveSelectionBackground);
   --rdg-checkbox-color: inherit;
   --rdg-checkbox-focus-color: inherit;
   --rdg-font-size: inherit;
@@ -27,13 +25,14 @@ body.vscode-dark .rdg-row-even {
   background: var(--vscode-editor-foreground);
   outline: none;
 }
+
 .cdwjxv8700-beta13 {
   border: 2px solid var(--vscode-editor-foreground);
   block-size: 10px;
   inline-size: 10px;
 }
 
-.filter-cell{
+.filter-cell {
   line-height: 35px;
   padding: 0;
 }
@@ -41,23 +40,24 @@ body.vscode-dark .rdg-row-even {
 .textInput {
   background-color: var(--vscode-input-background);
   color: var(--vscode-input-foreground);
-  }
-  
-  .refreshButton {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 9999;
-    background-color: var(--vscode-list-inactiveSelectionBackground);
-    color: var(--rdg-border-color);
-    border: none;
-    border-radius: 4px;
-    padding: 10px 20px;
-    font-size: 16px;
-    cursor: pointer;
-  }
-  body.vscode-dark .refreshButton{
-    background-color: var(--vscode-list-inactiveSelectionBackground);
-    color: var(--rdg-border-color);
-  }
+}
+
+.refreshButton {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 9999;
+  background-color: var(--vscode-list-inactiveSelectionBackground);
+  color: var(--rdg-border-color);
+  border: none;
+  border-radius: 4px;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+body.vscode-dark .refreshButton {
+  background-color: var(--vscode-list-inactiveSelectionBackground);
+  color: var(--rdg-border-color);
+}
