--- a/src/view/app/Query/query.css
+++ b/src/view/app/Query/query.css
@@ -13,6 +13,15 @@
 
 }
 
+.r104f42s700-beta13:not(.rdg-light) {
+    --rdg-background-color: inherit;
+    --rdg-header-background-color: var(--vscode-editorWidget-background);
+    --rdg-row-hover-background-color: rgba(0, 0, 0, 0.2);
+    --rdg-row-selected-background-color: var(--vscode-list-inactiveSelectionBackground);
+    --rdg-checkbox-color: inherit;
+    --rdg-border-color: none;
+}
+
 .c1wupbe700-beta13 {
     padding-inline: 4px;
 }
