--- a/src/view/app/Query/Export/export.css
+++ b/src/view/app/Query/Export/export.css
@@ -7,7 +7,6 @@
     align-items:center;
     font-size: inherit;
     font-style: inherit;
-    cursor: grab;
     border: 1px solid var(--vscode-notifications-foreground);
     padding: 5px;
     margin: 5px;
@@ -25,6 +24,13 @@
     text-align: center;
     font-size: 16px;
     font-weight: bold;
+    cursor: grab;
+}
+
+.header:hover{
+  opacity: 0.5;
+  border-bottom: 1px solid var(--vscode-notifications-foreground);
+  transition: all 0.3s ease-in-out;
 }
 
 #dropdown {
