--- a/src/view/app/Query/Update/update.css
+++ b/src/view/app/Query/Update/update.css
@@ -14,7 +14,6 @@
   overflow: hidden;
   align-self: center;
   position: fixed;
-  cursor: grab;
   border: 1px solid var(--vscode-editor-foreground);
   background-color: var(--vscode-editorWidget-background);
   padding: 5px;
@@ -42,9 +41,17 @@
   width: 100%;
   height: 30px;
   text-align: justify;
+  text-align: center;
   font-size: 16px;
   font-weight: bold;
   padding: 5px;
+    cursor: grab;
+}
+
+.update-header:hover{
+  border-bottom: 1px solid var(--vscode-input-foreground);
+  opacity: 0.5;
+  transition: all 0.3s ease-in-out;
 }
 
 .textInput {
