--- a/src/view/app/Query/SaveView/save.css
+++ b/src/view/app/Query/SaveView/save.css
@@ -1,81 +1,53 @@
-.modal {
-    position: center;
-    width: 250px;
-    height: 210px;
-    background-color: var(--vscode-notifications-background);
-    justify-content: center;
-    align-items:center;
-    font-size: inherit;
-    font-style: inherit;
-    border: 1px solid var(--vscode-notifications-foreground);
-    padding: 5px;
-    margin: 5px;
-    border-radius: 5px;
-  }
-
-.menu {
-    background-color: black;
+.modal-save {
+  position: center;
+  width: 250px;
+  background-color: var(--vscode-notifications-background);
+  justify-content: center;
+  align-items: center;
+  font-size: inherit;
+  font-style: inherit;
+  border: 1px solid var(--vscode-notifications-foreground);
+  padding: 5px;
+  margin: 5px;
+  border-radius: 5px;
 }
+
 .header {
-    position: center;
-    background-color: var(--vscode-notificationCenterHeader-background);
-    width: 100%;
-    height: 30px;
-    text-align: center;
-    font-size: 16px;
-    font-weight: bold;
-    cursor: grab;
+  position: center;
+  background-color: var(--vscode-notificationCenterHeader-background);
+  width: 100%;
+  height: 30px;
+  text-align: center;
+  font-size: 16px;
+  font-weight: bold;
+  cursor: grab;
 }
 
-.header:hover{
+.header:hover {
   opacity: 0.5;
   border-bottom: 1px solid var(--vscode-notifications-foreground);
   transition: all 0.3s ease-in-out;
 }
 
-#dropdown {
-    width: 120px;
-    background-color: var(--vscode-dropdown-background);
-    color: inherit;
-}
-
-.btn-container {
+.btn-container-save {
   text-align: center;
-  margin-top: 30px;
+  margin: 30px 0 20px 0;
+  display: flex;
+  justify-content: center;
 }
 
-.modal .content {
-  display:block;
+.modal-save .content {
+  display: block;
   text-align: center;
   margin-top: 10px;
 }
 
-.popup-overlay {
-    background: rgba(0, 0, 0, 0.5);
-    z-index: 997 !important;
-    pointer-events: none !important;
-    display: none;
-  }
+.btn-container-save .button {
+  margin-right: 10px;
+}
 
-  .popup-content {
-    z-index: 998 !important;
-    position:relative;
-    pointer-events: auto;
-    display: block;
-  }
-  .btn-container .button {
-    margin-right: 10px;
-  }
-  .checkbox {
-    margin-top: inherit;
-
-  }
-
-  .export-saving {
-    margin-bottom: 10px;
-    padding: 8px;
-    text-align: center;
-    border-radius: 4px;
-    font-weight: bold;
-  }
-  
+.input {
+  background-color: var(--vscode-input-background);
+  color: var(--vscode-input-foreground);
+  margin-top: 10px;
+}
